# baderkit

./: .environment2.yaml.swp  .gitignore  404.html  README.md  dev.yaml  dev_environment.yaml  environment.yaml  environment2.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  scratch.py  scratch1.py  sitemap.xml  test.py  untitled1.py
.github/workflows/: docs_publish.yml  lint_and_test.yml  python_publish.yml
api_reference/core/badelf/: index.html
api_reference/core/badelf_spin/: index.html
api_reference/core/bader/: index.html
api_reference/core/grid/: index.html
api_reference/core/labeler/: index.html
api_reference/core/labeler_spin/: index.html
api_reference/core/numba/: index.html
api_reference/plotting/bader/: index.html
api_reference/plotting/grid/: index.html
api_reference/plotting/structure/: index.html
background/: index.html
badelf/background/: index.html
badelf/methods/: index.html
badelf/usage/: index.html
bader/background/: index.html
bader/methods/: index.html
bader/usage/: index.html
benchmarks/: INCAR_Ag  INCAR_h2o  INCAR_nacl  POSCAR_h2o  memory_summary_baderkit.csv  nacl.py  nacl_baderkit_speed.py  nacl_convergence.py  nacl_henk_speed.py  nacl_speed_baderkit.py  nacl_speed_henk.py  orientation_summary_baderkit.csv  oxidation_summary_baderkit.csv  oxidation_summary_henk.csv  plot_baderkit_vs_henk_memory.py  plot_baderkit_vs_henk_speed.py  plot_h2o.py  plot_h2o_orientation.py  plot_memory_usage.py  plot_nacl_convergence.py  replot_speed.py  rotate_h2o.py  run_h2o_orientation.py  run_memory_usage.py  run_nacl_baderkit_speed.py  run_nacl_convergence.py  speed.py  sync_files.sh  test_speed.py  time_summary_baderkit.csv  time_summary_henk.csv
critical_points/usage/: index.html
css/: mkdocstrings.css
docs/: .index.md.swp  background.md  citing.md  examples.md  implementation.md  index.md  installation.md  methods.md  usage.md
docs/api_reference/bader/: bader.md
docs/api_reference/core/: badelf.md  badelf_spin.md  bader.md  grid.md  labeler.md  labeler_spin.md  numba.md
docs/api_reference/elf_analysis/: badelf.md  basin_overlap.md  elf_radii.md  labeler.md
docs/api_reference/plotting/: badelf.md  bader.md  elf_labeler.md  grid.md  structure.md
docs/api_reference/utilities/: grid.md  structure.md
docs/badelf/: background.md  methods.md  usage.md
docs/bader/: methods.md  usage.md
docs/critical_points/: usage.md
docs/css/: mkdocstrings.css
docs/elf_labeler/: background.md  usage.md
docs/example_scripts/: custom_file_formats.md  spin_polarized_calculations.md
docs/getting_started/: installation.md  plotting.md  usage.md
docs/theory/bader/: background.md  methods.md
docs/theory/critical_points/: usage.md
docs/theory/elf_analysis/: basin_overlap.md  elf.md  elf_labeler.md  elf_radii.md
docs/tutorial_scripts/other/: other_formats.py  plotting.py
docs/tutorial_scripts/qe/: bond_order.py  bond_polarity.py  electrides_charge.py  elf_radii.py  oxidation_states.py  spin_badelf.py
docs/tutorial_scripts/vasp/: bond_order.py  bond_polarity.py  electrides_charge.py  electrides_vasp.py  elf_radii.py  oxidation_states.py  spin_badelf.py
docs/tutorials/: bader_other.md  elf_labeler.md  index.md
docs/tutorials/other/: other_formats.md  plotting.md
docs/tutorials/qe/: badelf.md  badelf_spin.md  bader.md  bond_order.md  elf_analysis.md  elf_radii.md  polarization_index.md
docs/tutorials/vasp/: badelf.md  badelf_spin.md  bader.md  (+3 more)
elf_labeler/background/: index.html
elf_labeler/usage/: index.html
example_scripts/custom_file_formats/: index.html
example_scripts/spin_polarized_calculations/: index.html
examples/: index.html
implementation/: index.html
installation/: index.html
joss_paper/: paper.bib  paper.md
methods/: index.html
search/: search_index.json
src/baderkit/: __init__.py  _base_analysis.py
test_files/: bader_atom_summary.tsv  bader_basin_summary.tsv
tests/: test_badelf.py  test_bader.py  test_cli.py  test_elf_labeler.py  test_elf_radii.py  test_overlap.py
tests/test_files/: CHGCAR.cube  CHGCAR.hdf5  ELFCAR_test  POSCAR  POSCAR_labeled  generate_test_files.py  label.json
usage/: index.html
(+347 files in other folders)
